src/objects/Revenue_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Acct_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acct Calendar</label>
        <referenceTo>Acct_Calendar__c</referenceTo>
        <relationshipLabel>Revenue Invoice</relationshipLabel>
        <relationshipName>Revenue_Invoice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <label>Batch Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_Date__c</fullName>
        <label>Export Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Export_ID__c</fullName>
        <label>Export ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <externalId>true</externalId>
        <label>Invoice Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Load_Date__c</fullName>
        <label>Load Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_Date__c</fullName>
        <label>Processing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Revenue Invoice</label>
    <listViews>
        <fullName>RevInv_Errors</fullName>
        <columns>NAME</columns>
        <columns>Batch_Id__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Processing_Date__c</columns>
        <columns>Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>RevInv Errors</label>
    </listViews>
    <nameField>
        <label>Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Invoice</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>